# img-compactor

./: .gitignore  Cargo.toml  LICENSE  README.md  big_input.txt  config.toml  input.txt  perf_test.sh
iccli/: Cargo.toml
iccli/src/: main.rs
img-processor/: Cargo.toml
img-processor/src/: lib.rs
